--- a/app/templates/admin/organisation.html
+++ b/app/templates/admin/organisation.html
@@ -28,6 +28,7 @@
             <div class="card border-0 shadow-sm">
                 <div class="card-body">
                     <form method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <h5 class="mb-3">Basic Information</h5>
                         
                         <div class="mb-3">
