--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -15,6 +15,7 @@
                     </div>
                     
                     <form method="POST" action="{{ url_for('auth.forgot_password') }}">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="mb-4">
                             <label for="email" class="form-label">Email Address</label>
                             <input type="email" class="form-control" id="email" name="email" required 
